Fix visual errors & add functionality to toggle between light and dark mode

--- a/scss/breakpoints/_small.scss
+++ b/scss/breakpoints/_small.scss
@@ -28,7 +28,7 @@
 
   .container {
     .section-title {
-      margin-bottom: .25em;
+      margin-bottom: 1em;
       font-size: 3.6rem;
     }
   }
