--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -54,7 +54,7 @@
           color: utils.$greenColor;
 
           i {
-            color: utils.$textColor;
+            color: var(--lightColor);
           }
         }
       }
@@ -64,7 +64,7 @@
           color: utils.$redColor;
 
           i {
-            color: utils.$textColor;
+            color: var(--lightColor);
           }
         }
       }
@@ -86,16 +86,20 @@
       &-btn {
         width: 180px;
         padding: 1em;
-        border: 2px solid utils.$textColor;
+        border: 2px solid var(--lightColor);
         border-radius: 8px;
         background: none;
-        color: utils.$textColor;
+        color: var(--lightColor);
         font-size: 1.6rem;
-        transition: background-color 300ms ease, color 300ms ease;
+        transition: background-color 300ms ease, color 300ms ease, border-color 300ms ease;
         cursor: pointer;
 
         i {
           margin-right: .25em;
+        }
+
+        &:hover {
+          color: var(--darkColor);
         }
 
         &:focus {
@@ -105,18 +109,15 @@
 
         &--add {
           &:hover {
-            background-color: utils.$textColor;
-            color: utils.$bgColor;
+            border-color: var(--lightColor);
+            background-color: var(--lightColor);            
           }
         }
 
         &--deleteAll {
           &:hover {
             border-color: utils.$redColor;
-            color: utils.$redColor;
-          }
-          &:focus {
-            border-color: utils.$redColor;
+            background-color: utils.$redColor;
           }
         }
       }
@@ -136,13 +137,17 @@
 
       &-button {
         padding: 2em;
-        border: 2px solid utils.$textColor;
+        border: 2px solid var(--lightColor);
         border-radius: 50%;
         transition: transform 300ms ease;
         cursor: pointer;
 
+        &--light {
+          background-color: utils.$lightColor;
+        }
+
         &--dark {
-          background-color: utils.$bgColor;
+          background-color: utils.$darkColor;
         }
 
         &:hover {
