--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -1,12 +1,7 @@
-$bgColor: #0d1321;
-$textColor: #f0ebd8;
+$darkColor: #0d1321;
+$lightColor: #f0ebd8;
 $firstColor: #748CAB;
 $secondColor: #3E5C76;
 $thirdColor: #1D2D44;
 $greenColor: #386641;
 $redColor: #bc4749;
-
-:export {
-  bgColor: $bgColor;
-  textColor: $textColor;
-}
